chore: introduces MapStruct and uses it instead of manual mapping between DTOs and entities
The implementation has been done so far for the packages `users` and `vaccination_info`.

Also defines a central configuration with mapping for aggregate ids.

Introduces an annotation (with the necessary helper classes) for mapper tests that can be used to implement a Spring test that makes error-prone mocking unnecessary with the Spring context. Thereby the Spring context is built specifically for the mappers with general base mappers and the Spring Conversion Service including all converters to avoid long execution times with the whole context.

PR #715